# Scanner3D

./: README.md
build-Project-Desktop_Qt_5_3_GCC_32bit-Debug/: Makefile  Scanner3D  SimplePointsReader  basura.avi  sonic.avi
read/: CMakeLists.txt  SimplePointsReader.cxx  SimplePointsReader.cxx~  simple1.xyz  simple2.xyz
